src/app.css
*,
*::before,
*::after {
	box-sizing: border-box;
}

:root {
	--font-mono: 'Fira Mono', monospace;
	--background-dark: #1d1d1f;
	--background-light: #fff;
	--border-color: #30363d;
	--border-dark: #424245;
	--color-dark-secondary: #a1a1a6;
	--color-dark: #fefefe;
	--color-light: #0d1117;
	--emphasis-disabled: 0.38;
	--emphasis-high: 0.87;
	--emphasis-medium: 0.8;
	--font-size: 16px;
	--font: -apple-system, BlinkMacSystemFont, Helvetica Neue, sans-serif;
	--primary: #00bffc;
	--radius: 4px;
	--secondary: #000;
}

html {
	font-size: var(--font-size);
	height: -webkit-fill-available;
}

body {
	font-family: var(--font);
	font-weight: 400;
	line-height: 1.2;
	margin: 0;
	min-height: 100vh;
	min-width: 100vw;
	padding: 0;
	position: relative;
}

body.light {
	color: var(--color-light);
	background-color: var(--background-light);
  --pre: #f5f5f7;
}

body.dark {
	color: var(--color-dark);
	background-color: var(--background-dark);
  --pre: #2d2d2d;
}

a {
	color: var(--primary);
}

h6,
h5,
h4,
h3,
h2,
h1 {
	font-family: var(--font-header);
	margin-top: 0;
	margin-bottom: 1.5rem;
	font-weight: 500;
}

h1 {
	font-size: calc(1.375rem + 1.5vw);
}
@media (min-width: 1200px) {
	h1 {
		font-size: 3rem;
	}
}

h2 {
	font-size: calc(1.325rem + 0.9vw);
}
@media (min-width: 1200px) {
	h2 {
		font-size: 2.5rem;
	}
}

h3 {
	font-size: calc(1.3rem + 0.6vw);
}
@media (min-width: 1200px) {
	h3 {
		font-size: 1.75rem;
	}
}

h4 {
	font-size: calc(1.275rem + 0.3vw);
}
@media (min-width: 1200px) {
	h4 {
		font-size: 1.5rem;
	}
}

h5 {
	font-size: 1.25rem;
}

h6 {
	font-size: 1rem;
}

pre,
code {
  background-color: var(--pre);
	font-family: var(--font-mono);
	overflow-x: auto;
}

pre {

	border-radius: 3px;
	padding: 0.5rem;
}

pre > code {
	padding: 0;
}
section {
  height: calc(100vh - (60px + 55px));
}

@media screen and (min-width: 1200px) {
  section {
    height: calc(100vh - (60px + 55px));
  }
}

@media (prefers-reduced-motion: no-preference) {
	body {
		scroll-behavior: smooth;
	}
}

@media (prefers-color-scheme: light) {
  :root {
    --pre: #f5f5f7;
  }
	body {
		color: var(--color-light);
		background-color: var(--background-light);
	}
}

@media (prefers-color-scheme: dark) {
  :root {
    --pre: #2d2d2d;
  }
	body {
		color: var(--color-dark);
		background-color: var(--background-dark);
	}
}

